wordpress/vr/css/style.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-drag: none;
  -webkit-touch-callout: none;
  -ms-content-zooming: none;
}

@font-face {
  font-family: "nunito";
  src: url("../fonts/Nunito-Regular.ttf");
}

@font-face {
  font-family: "nunito-semibold";
  src: url("../fonts/Nunito-SemiBold.ttf");
}

html, body {
  display: flex;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  overflow: hidden;
  justify-content: center;
  align-items: center;
  font-family: nunito, helvetica, arial, sans-serif;
}

#hint {
  text-align: center;
  padding: 20px;
}

#pano {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#loading-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#loading-image {
  display: block;
}

#loading-image-container {
  display: flex;
  margin: 0px auto;
  height: 150px;
}

#loading-text {
  margin: 0px auto;
  font-family: nunito-semibold;
  font-size: 2em;
}

#compass {
  background-color: #FFFFFF;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, .3);
  width: 42px;
  height: 42px;
  border-radius: 50%;
  position: fixed;
  top: 10px;
  right: 10px;
  scale: 1.0;
}

#fullscreen {
  background-color: #FFFFFF;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, .3);
  width: 42px;
  height: 42px;
  border-radius: 6px;
  position: absolute;
  top: 10px;
  left: 10px;
  scale: 1.0;
}

#fullscreen-icon {
  position: absolute;
  width: 26px;
  height: 26px;
  top: 8px;
  left: 8px;
}

#Arrow {
  top: 50%;
  left: 11px;
  stroke: rgb(31, 191, 179);
  transform-origin: 50% 50%;
}

#hotspot-details {
  background-color: #000000c0;
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding: 50px;
}

#hotspot-details-container {
  max-width: 500px;
}

#hotspot-image-container {
  height: 100%;
  display: flex;
  flex-direction: column;
  min-width: 30%;
}

#hotspot-details h1 {
  font-size: 24px;
  padding: .3em;
  text-align: center;
  color: #fff;
}

#hotspot-details p {
  font-size: 16px;
  padding-left: .5em;
  padding-right: .5em;
  text-align: center;
  color: #fff;
}

.stop p {
  width: 68px;
  height: 68px;
  font-size: 12px;
  text-align: center;
  color: #fff;
  white-space: normal;
  text-overflow: ellipsis;
  margin: auto;
  display: table-cell;
  vertical-align: middle;
  background-color: #00000088;
  border-radius: 10px;
  line-height: 1.1;
  font-family: nunito-semibold;
}

#hotspot-details-close-button {
  margin: auto;
  background-color: transparent;
  border: none;
  display: block;
}

#hotspot-full-image {
  max-width: 100%;
  max-height: 100%;
  margin: auto;
}

.interest {
  background-image: url(http://placeimg.com/640/360/any);
  height: 360px;
  position: relative;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.video-footer {
  text-align: center;
  width: 100%;
  background: rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(5px);
  /*filter: blur(5px);
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);*/
  position: absolute;
  bottom: 0;
  padding: 10px 0px 10px 10px;
}

.video-footer-floating {
  text-align: center;
  background: rgba(255, 255, 255, 0.5);
  backdrop-filter: blur(5px);
  /*filter: blur(5px);
  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);*/
  position: fixed;
  bottom: 30px;
  left: 30px;
  right: 30px;
  padding: 10px 0px 10px 10px;
  border-radius: 20px;
  max-width: max-content;
  margin: auto;
}

.start-btn {
  color: #fff;
  background-color: #22bfb3;
  padding: 15px 60px 15px 60px;
  border-width: 0;
  border-radius: 40px;
  margin: 10px auto;
  font-family: nunito-semibold;
  font-size: 1.2em;
  display: flex;
  align-items: center;
  white-space: nowrap;
}

.play-icon, .rewind-btn, .pause-btn, .play-btn, .skip-btn, .stop {
  display: inline-block;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.play-icon {
  /*background-image: url('../img/stop-count-icon.svg');
  width: 18px;
  height: 17px;
  margin: 0 15px 0 0;
  stroke: #fff;*/
  border: 0;
  background: transparent;
  box-sizing: border-box;
  width: 0;
  height: 16px;
  border-color: transparent transparent transparent #fff;
  margin: 0 15px 0 0;
  cursor: pointer;
  border-style: solid;
  border-width: 10px 0 10px 18px;
}

#panel-tour-begin {
  padding: 0px 15px 0px 5px;
}

#panel-tour-continue {
  padding: 0px 15px 0px 5px;
}

#panel-tour-during {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.control-container {
  border-radius: 10px;
  background-color: #cbcbcb;
  width: 130px;
  min-width: 120px;
  height: 78px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.rewind-btn, .pause-btn, .play-btn, .skip-btn {
  margin: 10px 5px;
  width: 26px;
  height: 26px;
}

.play-btn {
  border: 0;
  background: transparent;
  box-sizing: border-box;
  width: 0;
  height: 26px;
  border-color: transparent transparent transparent #202020;
  transition: 100ms all ease;
  cursor: pointer;
  border-style: solid;
  border-width: 13px 0 13px 20px;
}

.play-btn.paused {
  border-style: double;
  border-width: 0px 0 0px 20px;
}

.play-btn:hover {
  border-color: transparent transparent transparent #404040;
}

.rewind-btn:hover {
  opacity: 75%;
}

.skip-btn:hover {
  opacity: 75%;
}

.stops-container-wrap {
  font-size: 0;
  overflow-x: scroll;
  overflow-y: hidden;
  padding-left: 10px;
}

/*IE*/

@*@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .stops-container-wrap {
    margin-right: -10px;
    padding-top: 32px;
    margin-top: -32px;
    margin-bottom: -32px;
    padding-bottom: 32px;
    /* ie scrollbar color properties */
    scrollbar-base-color: #efefef;
    scrollbar-face-color: #666666;
    scrollbar-3dlight-color: #666666;
    scrollbar-highlight-color: #666666;
    scrollbar-track-color: #efefef;
    scrollbar-arrow-color: #666666;
    scrollbar-shadow-color: #666666;
    scrollbar-dark-shadow-color: #666666;
  }
  *@ .stops-container-wrap:after {
    content: "";
    height: 32px;
    display: block;
  }
}

/*Edge*/

@*@supports (-ms-ime-align:auto) {
  .stops-container-wrap {
    margin-right: -10px;
    padding-top: 16px;
    margin-top: -16px;
    margin-bottom: -16px;
    padding-bottom: 16px;
  }
  *@ .stops-container-wrap:after {
    content: "";
    height: 16px;
    display: block;
  }
}

/*Firefox*/

/*From version 64 - https://drafts.csswg.org/css-scrollbars-1/*/

.stops-container-wrap {
  scrollbar-width: none;
  scrollbar-color: #666666 #efefef;
}

/*Chrome*/

.stops-container-wrap::-webkit-scrollbar-track {
  background-color: transparent;
  height: 0px;
}

.stops-container-wrap::-webkit-scrollbar-thumb {
  background-color: #333;
  border: 1px solid transparent;
  background-clip: content-box;
  height: 0px;
}

.stops-container-wrap::-webkit-scrollbar {
  width: 4px;
  height: 0px;
}

.stops-container {
  width: 100%;
  overflow: visible;
  white-space: nowrap;
}

/*  .control-container {
    height: 100px;
    width: 100%;
    background: rgba(255,255,255,0.5);
    backdrop-filter: blur(5px);
    position: absolute;
    bottom: 0;
    text-align:center;
    margin :0 auto ;
    display: flex;
    justify-content: center;
  }

  .start-btn {
    position: absolute;
    height: 46px;
    color: #fff;
    background-color: #22bfb3;
    padding: 15px 60px 15px 60px;
    border-width: 0;
    border-radius: 23px;
    margin :0 auto ;
    display: flex;
    justify-content: center;
    top: 27px;
  }

  .play-icon {
    width: 13px;
    height:18px;
    margin: 0 5px 0 0;
    stroke: #fff;
    display: inline-block;
    border: none;
    border-width: 0;
  }*/

.stop, .walk {
  /*float: left;*/
  display: inline-block;
}

.stop {
  border-radius: 10px;
  margin: 2px;
}

.stop-spacer {
  width: 10px;
  display: inline-block;
}

.stop.active {
  border: 2px solid #22bfb3;
  border-radius: 12px;
  margin: 0px;
}

.walk {
  border: none;
  width: 8px;
  margin: 30px -2px 32px -2px;
  /*half .stop height - half .walk.active border height */
  border-top: 8px solid #666;
  z-index: -1;
  position: relative;
}

.walk.active {
  border-top: 8px solid #22bfb3;
}

